--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -3,11 +3,11 @@ nav {
   margin-bottom: 1.2em;
 
   a {
-    color: $offBlack;
+    color: $offWhite;
     text-decoration: none;
 
     &:hover {
-      color: $offBlack;
+      color: $offWhite;
       text-decoration: underline;
     }
   }
