--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -21,8 +21,8 @@
   margin-bottom: 1.2em;
   line-height: 1.65em;
 
-  p a:hover {
-    color: #4183c4;
+  p a{
+    color: #d22ac5;
   }
 
   img {
