--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,9 +1,11 @@
 $offBlack: hsl(10, 1%, 22%);
+$offWhite: #eee;
 
 $codeFont: Monaco, Consolas, monospace;
-$mainFont: Georgia, Times, "Times New Roman", serif;
+$mainFont: 'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
 
-$baseTextColor: $offBlack;
+$baseTextColor: $offWhite;
+$baseBackgroundColor: $offBlack;
 $lightTextColor: transparentize($baseTextColor, .5);
 
 @mixin breakpoint($point) {
@@ -29,6 +31,7 @@ a {
 
 body {
   margin: 0;
+  background: $baseBackgroundColor;
   color: $baseTextColor;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
