fix #3 rssを出力する

--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="<%= data.baseUrl %>images/cabin.png">
     <link href="<%= data.baseUrl %>styles/main.css" rel="stylesheet">
+    <link rel="alternate" type="application/rss+xml" href="<%= data.baseUrl %>feed.xml" title="RSS">
     <title><%= title %></title>
     <% if ( locals.description ) { %>
       <meta name="description" content="<%= description %>">
