--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1,17 +1,7 @@
 <% locals.title = "My Blog" %>
 <% include ../layouts/_header %>
 <% posts.forEach(function(post){ %>
-  <% include ../layouts/_post %>
+  <% include ../layouts/_postHead %>
 <% }) %>
 
-<div class="pagination group">
-  <% for (var i = 0; i < pages.length; i++) { %>
-    <% var page = pages[i] %>
-    <% if (i === currentIndex - 1) { %>
-      <a href="<%= data.baseUrl %><%= page.url %>" class="newer"> Newer &#8594;</a>
-    <% } else if (i === currentIndex + 1) { %>
-      <a href="<%= data.baseUrl %><%= page.url %>" class="older"> &#8592; Older</a>
-    <% } %>
-  <% } %>
-</div>
 <% include ../layouts/_footer %>
