fix #6 リストページで本文の最初だけだす

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1,7 +1,7 @@
 <% locals.title = "My Blog" %>
 <% include ../layouts/_header %>
 <% posts.forEach(function(post){ %>
-  <% include ../layouts/_postHead %>
+  <% include ../layouts/_postDescription %>
 <% }) %>
 
 <% include ../layouts/_footer %>
