--- a/src/pages/tags.ejs
+++ b/src/pages/tags.ejs
@@ -1,7 +1,7 @@
 <% locals.title = pages[currentIndex].id %>
 <% include ../layouts/_header %>
 <% posts.forEach(function(post){ %>
-  <% include ../layouts/_post %>
+  <% include ../layouts/_postDescription %>
 <% }) %>
 
 <% include ../layouts/_footer %>
