fix #7 トップページゎ最新ポストだけ全文表示にしてみる

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1,7 +1,6 @@
 <% locals.title = "My Blog" %>
 <% include ../layouts/_header %>
-<% posts.forEach(function(post){ %>
-  <% include ../layouts/_postDescription %>
-<% }) %>
+<% post = posts[0] %>
+<% include ../layouts/_post %>
 
 <% include ../layouts/_footer %>
