fix #5 サイドバーっける

--- a/src/layouts/_footer.ejs
+++ b/src/layouts/_footer.ejs
@@ -1,3 +1,6 @@
+      </div>
     </div>
+    <script src="<%= data.baseUrl %>scripts/jquery/jquery.min.js"></script>
+    <script src="<%= data.baseUrl %>scripts/main.js"></script>
   </body>
 </html>
