--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -12,7 +12,8 @@
     <% } %>
   </head>
   <body>
-    <div class="center">
+    <div class="wrapper">
+      <div class="content">
       <nav class="group">
         <h1 class="name">
           <a href="<%= data.baseUrl %>">My Name</a>
