--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -47,13 +47,21 @@ body {
   }
 }
 
-.center {
+.wrapper {
+  position: relative;
   margin: 0 auto;
-  max-width: 620px;
-  width: 55%;
+  max-width: 820px;
+  width: 65%;
 
   @include breakpoint(big-phone) {
-    width: 88%;
+    width: 98%;
+  }
+}
+
+.content {
+  margin-right: 200px;
+  @include breakpoint(small-phone) {
+    margin-right: 0;
   }
 }
 
