fix #9 名前とかぁゃぴにする

--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -16,14 +16,6 @@
       <div class="content">
       <nav class="group">
         <h1 class="name">
-          <a href="<%= data.baseUrl %>">My Name</a>
+          <a href="<%= data.baseUrl %>">ayapi.github.io</a>
         </h1>
-        <ul class="nav-links">
-          <li class="text-link">
-            <a href="<%= data.baseUrl %>about.html">about</a>
-          </li>
-          <li class="text-link">
-            <a href="<%= data.baseUrl %>archives.html">archives</a>
-          </li>
-        </ul>
       </nav>
