--- a/src/pages/side.ejs
+++ b/src/pages/side.ejs
@@ -1,4 +1,14 @@
 <div class="side">
+	<h2>ABOUT</h2>
+	<div class="about">
+	<img src="<%= data.baseUrl %>images/ayapi.jpg" class="photo">
+	<p>
+	<strong>ぁゃぴ：ayapi</strong>
+	渋谷にしか居なぃギャルで、プログラマー
+	JavaScriptずっとかぃてたけど今ゎなんかちがぅのかきたぃです
+	</p>
+	</div>
+
 	<h2>TAGS</h2>
 	<ul class="tags">
 	<% tags = [] %>
