fix #10 日本語にぁゎせてcssを調節する

--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -16,6 +16,6 @@
       <div class="content">
       <nav class="group">
         <h1 class="name">
-          <a href="<%= data.baseUrl %>">ayapi.github.io</a>
+          <a href="<%= data.baseUrl %>"><span>ay</span>a<span>p</span>i.github.io</a>
         </h1>
       </nav>
