fix #11 フッターてきとうにっける

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -32,7 +32,7 @@
   }
 
   blockquote {
-    border-left: 6px solid gainsboro;
+    border-left: 6px solid black;
     margin-left: 0;
     padding-left: 1em;
   }
