--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -30,7 +30,12 @@ a {
   clear: both;
 }
 
+html {
+  height: 100%;
+}
 body {
+  min-height: 100%;
+  position: relative;
   margin: 0;
   background: $baseBackgroundColor;
   color: $baseTextColor;
@@ -57,6 +62,8 @@ body {
   @include breakpoint(big-phone) {
     width: 98%;
   }
+
+  padding-bottom: 100px;
 }
 
 .content {
