--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -1,5 +1,5 @@
 .post-head {
-  border-top: 1px solid gainsboro;
+  border-top: 1px solid black;
   padding-top: 0.6em;
   &:first-of-type{
     border-top: 0;
