fix #13 iPhoneでへんな余白が右にぁるのを直す

--- a/src/styles/_foot.scss
+++ b/src/styles/_foot.scss
@@ -1,6 +1,7 @@
 .footer{
   background: rgba(0,0,0,.1);
   @include border-radius(3px);
+  @include box-sizing(border-box);
   text-align: center;
   margin-top: 50px;
   padding: 30px;
