--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -18,4 +18,9 @@
         <h1 class="name">
           <a href="<%= data.baseUrl %>"><span>ay</span>a<span>p</span>i.github.io</a>
         </h1>
+        <ul class="nav-links">
+          <li class="text-link">
+            <a href="<%= data.baseUrl %>archives.html">ARCHIVES</a>
+          </li>
+        </ul>
       </nav>
