--- a/src/styles/_side.scss
+++ b/src/styles/_side.scss
@@ -19,6 +19,8 @@
     font-weight: normal;
     &:first-of-type{
       border-top: 0;
+      padding-top: 0;
+      margin-top:0.2em;
     }
   }
   ul, li{
@@ -45,11 +47,23 @@
         float:left;
       }
     }
-    &:after{
+    .account{
       @include breakpoint(small-phone) {
-        content: "";
-        display: block;
-        clear: left;
+        clear:left;
+      }
+      li{
+        @include breakpoint(small-phone) {
+          display: inline-block;
+          margin-right: 0.5em;
+        }
+        white-space: nowrap;
+      }
+    }
+    .account a{
+      font-size:0.9em;
+      padding-left: 0.2em;
+      @include breakpoint(small-phone) {
+        font-size:1.1em;
       }
     }
   }
