--- a/src/pages/side.ejs
+++ b/src/pages/side.ejs
@@ -7,6 +7,10 @@
 	渋谷にしか居なぃギャルで、プログラマー
 	JavaScriptずっとかぃてたけど今ゎなんかちがぅのかきたぃです
 	</p>
+	<ul class="account">
+		<li class="icon-github"><a href="https://github.com/ayapi">github.com/ayapi</a></li>
+		<li class="icon-twitter"><a href="https://twitter.com/upgrade_ayp">twitter.com/upgrade_ayp</a></li>
+	</ul>
 	</div>
 
 	<h2>TAGS</h2>
