fix #24 RSSアイコンをっける

--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -17,6 +17,7 @@
       <nav class="group">
         <h1 class="name">
           <a href="<%= data.baseUrl %>"><span>ay</span>a<span>p</span>i.github.io</a>
+          <a href="<%= data.baseUrl %>feed.xml" title="RSS" class="icon-feed"> </a>
         </h1>
         <ul class="nav-links">
           <li class="text-link">
