fix #19 title要素にサイト名が入るょーにする

--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="<%= data.baseUrl %>images/cabin.png">
     <link href="<%= data.baseUrl %>styles/main.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" href="<%= data.baseUrl %>feed.xml" title="RSS">
-    <title><%= title %></title>
+    <title><%= title %><% if(title){%> - <% } %>ayapi.github.io</title>
     <% if ( locals.description ) { %>
       <meta name="description" content="<%= description %>">
     <% } %>
