--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1,4 +1,4 @@
-<% locals.title = "ayapi.github.io" %>
+<% locals.title = "" %>
 <% include ../layouts/_header %>
 <% post = posts[0] %>
 <% include ../layouts/_post %>
