fix #27 サイトのタイトルとか共通の情報を書くconfigファイルみたぃなのを作る

--- a/src/layouts/_header.ejs
+++ b/src/layouts/_header.ejs
@@ -6,9 +6,11 @@
     <link rel="icon" type="image/png" href="<%= data.baseUrl %>images/cabin.png">
     <link href="<%= data.baseUrl %>styles/main.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" href="<%= data.baseUrl %>feed.xml" title="RSS">
-    <title><%= title %><% if(title){%> - <% } %>ayapi.github.io</title>
+    <title><%= title %><% if(title){%> - <% } %><%= data.title %></title>
     <% if ( locals.description ) { %>
       <meta name="description" content="<%= description %>">
+    <% }else{ %>
+      <meta name="description" content="<%= data.description %>">
     <% } %>
   </head>
   <body>
