--- a/src/layouts/_post.ejs
+++ b/src/layouts/_post.ejs
@@ -4,8 +4,8 @@
 </div>
 
 <ul class="post-social">
-<li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://ayapi.github.io<%= data.baseUrl %><%= post.url %>" data-lang="ja">ツイート</a></li>
-<li class="pocket"><a data-save-url="http://ayapi.github.io<%= data.baseUrl %><%= post.url %>" data-pocket-label="pocket" data-pocket-count="horizontal" class="pocket-btn" data-lang="en"></a></li>
-<li class="hatena"><a href="http://b.hatena.ne.jp/entry/http://ayapi.github.io<%= data.baseUrl %><%= post.url %>" class="hatena-bookmark-button" data-hatena-bookmark-title="<%= title %> - ayapi.github.io" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a></li>
-<li class="facebook"><fb:like url="http://ayapi.github.io<%= data.baseUrl %><%= post.url %>" href="https://developers.facebook.com/docs/plugins/" layout="button_count" action="like" show_faces="false" share="false"></fb:like></li>
+<li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="<%= data.url %><%= data.baseUrl %><%= post.url %>" data-lang="ja">ツイート</a></li>
+<li class="pocket"><a data-save-url="<%= data.url %><%= data.baseUrl %><%= post.url %>" data-pocket-label="pocket" data-pocket-count="horizontal" class="pocket-btn" data-lang="en"></a></li>
+<li class="hatena"><a href="http://b.hatena.ne.jp/entry/<%= data.url %><%= data.baseUrl %><%= post.url %>" class="hatena-bookmark-button" data-hatena-bookmark-title="<%= title %> - <%= data.title %>" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a></li>
+<li class="facebook"><fb:like url="<%= data.url %><%= data.baseUrl %><%= post.url %>" href="https://developers.facebook.com/docs/plugins/" layout="button_count" action="like" show_faces="false" share="false"></fb:like></li>
 </ul>
