--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -53,16 +53,15 @@
 
 code {
   background:#000;
-  padding: 0 0.3em;
+  padding: 0 0.2em;
   @include border-radius(3px);
-  margin: 0;
-  font-size: .8em;
-  line-height: 1.5em;
+  display: inline-block;
+  margin: 0 0.2em;
   font-family: $codeFont;
+  font-size: 0.9em;
 }
 
-.markdown > pre {
-  white-space: normal;
+.markdown pre {
   font-family: $codeFont;
   overflow: auto;
   margin: 1em 0;
@@ -75,6 +74,13 @@ code {
   code {
     border: 0;
     padding: 0;
+    display: block;
+    background:transparent;
+    @include border-radius(0);
+    font-size: 0.85em;
+    @include breakpoint(small-phone) {
+      font-size: 0.8em;
+    }
   }
 }
 
