--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -75,7 +75,7 @@
     padding-left: 10px;
     margin-top: 2em;
     padding-top: 1px;
-    &:first-of-type{
+    &:first-child{
       margin-top: 0.6em;
     }
 
