--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -50,8 +50,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   font-family: $mainFont;
+}
+body, td{
   font-size: 15px;
-
   @include breakpoint(big-phone) {
     font-size: 14px;
   }
