--- a/src/styles/_side.scss
+++ b/src/styles/_side.scss
@@ -34,6 +34,9 @@
   }
   .about{
     font-size:0.8em;
+    @include breakpoint(small-phone) {
+      font-size:1em;
+    }
     strong{
       display:block;
       font-size:1.1em;
@@ -63,7 +66,7 @@
       font-size:0.9em;
       padding-left: 0.2em;
       @include breakpoint(small-phone) {
-        font-size:1.1em;
+        font-size:1.2em;
       }
     }
   }
@@ -77,6 +80,13 @@
       &:last-of-type{
         border:0;
       }
+      a{
+        display:inline-block;
+        @include breakpoint(small-phone) {
+          font-size: 1.4em;
+          padding:0.5em 0;
+        }
+      }
     }
   }
   .recent{
@@ -84,6 +94,13 @@
       padding-bottom:0.3em;
       margin-bottom:0.3em;
       border-bottom: 1px solid rgba(0,0,0,.3);
+      a{
+        display:block;
+        @include breakpoint(small-phone) {
+          font-size: 1.4em;
+          padding:0.5em 0;
+        }
+      }
     }
   }
 }
